# agent-bus

./: .gitignore  DESIGN.md  LICENSE  README.ko.md  README.md  pyproject.toml
agentbus/: __init__.py  __main__.py  a2a.py  assessment.py  bus.py  dashboard.py
agentbus/cards/: README.md  example-agent.json
agentbus/examples/aas/: assessment-summary.sample.json
agentbus/examples/adapters/: a2a-outbound.sh  claude-runner.py  codex-runner.py  openai-compatible.sh  run-agent.sh  wake-shell.sh
agentbus/examples/demo-bus/: README.md  acks.jsonl  issues.jsonl  messages.jsonl  tasks.jsonl
agentbus/examples/smoke/: dashboard-ui-smoke.js  publish-smoke.sh
agentbus/examples/wakeup/: a2a-events.json  agent-runner-inbox.json  claude-inbox.json  claude-runner-inbox.json  codex-inbox.json  codex-runner-inbox.json  openai-compatible-events.json
agentbus/resources/aas/: assessment-summary.sample.json  operational-data.sample.json
agentbus/resources/bridge/: a2a-reviewer.json  claude-inbox.json  claude-runner-inbox.json  codex-inbox.json  codex-runner-inbox.json  gemini-runner-inbox.json  openai-compatible-messages.json  openai-compatible-tasks.json  openai-compatible-tickets.json
agentbus/resources/demo-bus/: README.md  acks.jsonl  channel.json  delivered.jsonl  issues.jsonl  key_context.json  message_deletes.jsonl  messages.jsonl  status.json  tasks.jsonl
agentbus/resources/demo-bus/bridge/: claude-safety-runner.json  codex-docs-runner.json  codex-policy-runner.json  codex-ui-runner.json  demo-a2a-outbound.json  demo-monitor.json  profile.template.json
agentbus/resources/demo-bus/skills/demo-showcase-review/: SKILL.md  evidence.jsonl
agentbus/resources/demo-bus/skills/loop-closure-report/: SKILL.md  evidence.jsonl
agentbus/resources/demo-bus/store/: capsule.sqlite
agentbus/resources/demo-bus/teammate-runs/: demo-a2a-outbound.failures.jsonl  demo-monitor.position
agentbus/resources/smoke/: dashboard-ui-smoke.js  publish-smoke.sh
agentbus/schemas/: a2a-rpc.v1.md  adapters.v1.md  assessment-packet.v1.md  bridge-handlers.v1.md  bridge-profile.v1.md  events.v1.md  wakeup-profile.v1.md
agentbus/skills/agent-bus-loop/: SKILL.md
agentbus/skills/agent-bus-loop/references/: workflow.md
agentbus/skills/agent-bus-workflow/: SKILL.md
agentbus/skills/lead-strategic-approach/: SKILL.md
agentbus/static/: dashboard-primitives.js  dashboard.css  dashboard.html  dashboard.js  lucide-license.txt
