[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-bus"
version = "0.1.0"
description = "Local coordination and provenance for multi-agent work."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Ruzzy77" }]
keywords = ["agents", "coordination", "message-bus", "dashboard", "llm"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Topic :: Software Development",
]
dependencies = ["cryptography>=42"]

[project.scripts]
agentbus = "agentbus.bus:main"
agentbus-dashboard = "agentbus.dashboard:main"

[tool.setuptools]
packages = ["agentbus"]
include-package-data = false

[tool.setuptools.package-data]
agentbus = [
  "cards/*.json",
  "cards/*.md",
  "skills/*/*.md",
  "skills/*/references/*.md",
  "schemas/*.md",
  "resources/demo-bus/*",
  "resources/demo-bus/bridge/*.json",
  "resources/demo-bus/store/*",
  "resources/demo-bus/teammate-runs/*",
  "resources/demo-bus/skills/*/*.md",
  "resources/demo-bus/skills/*/*.jsonl",
  "resources/aas/*.json",
  "resources/smoke/*.sh",
  "resources/smoke/*.js",
  "resources/bridge/*.json",
  "static/*",
  "vendor/katex/*",
  "vendor/katex/fonts/*",
]
